# polkadot-sdk-solochain

./: Cargo.toml
pallets/authorship/: Cargo.toml
pallets/bags-list/: Cargo.toml
pallets/election-provider-support/: Cargo.toml
pallets/election-provider-support/solution-type/: Cargo.toml
pallets/session/: Cargo.toml
pallets/staking/: Cargo.toml
pallets/staking/reward-curve/: Cargo.toml
primitives/externalities/: Cargo.toml
primitives/panic-handler/: Cargo.toml
primitives/staking/: Cargo.toml
primitives/state-machine/: Cargo.toml
primitives/tracing/: Cargo.toml
primitives/trie/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: apis.rs  lib.rs
runtime/src/configs/: mod.rs
