[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    # "primitives/*",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
solochain-template-runtime = { path = "./runtime", default-features = false }
pallet-template = { path = "./pallets/template", default-features = false }
ahash = { version = "0.8.2" }
memory-db = { version = "0.32.0", default-features = false }
nohash-hasher = { version = "0.2.0" }
clap = { version = "4.5.10" }
serde = { version = "1.0.214", default-features = false }
pretty_assertions = { version = "1.3.0" }
assert_matches = { version = "1.5.0" }
array-bytes = { version = "6.2.2", default-features = false }
arbitrary = { version = "1.3.2" }
aquamarine = { version = "0.5.0" }
hash-db = { version = "0.16.0", default-features = false }
impl-trait-for-tuples = { version = "0.2.3" }
smallvec = { version = "1.11.0", default-features = false }
criterion = { version = "0.5.1", default-features = false }
schnellru = { version = "0.2.3" }
tracing = { version = "0.1.37", default-features = false }
trie-root = { version = "0.18.0", default-features = false }
tracing-core = { version = "0.1.32", default-features = false }
tracing-futures = { version = "0.2.4" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.18" }
rand = { version = "0.8.5", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
docify = { version = "0.2.9" }
log = { version = "0.4.22", default-features = false }
proc-macro-crate = { version = "3.2.0"}
trie-db = { version = "0.29.1", default-features = false }
thiserror = { version = "1.0.64" }
quote = { version = "1.0.38" }
trie-bench = { version = "0.39.0" }
trie-standardmap = { version = "0.16.0" }
syn = { features = ["full", "visit"], version = "2.0.98" }
proc-macro2 = { version = "1.0.93" }
frame-benchmarking-cli = { version = "43.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.6.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.24.3" }
pallet-babe = { version = "38.0.0",default-features = false}
pallet-transaction-payment = { version = "38.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "41.0.0", default-features = false }
pallet-staking-reward-curve = { version = "12.0.0",default-features = false}
pallet-session = { version = "38.0.0",default-features = false}
pallet-offences = { version = "38.0.0",default-features = false}
pallet-staking = { version = "38.0.0",default-features = false}
frame-election-provider-support ={ path= "pallets/election-provider-support", default-features = false}
frame-election-provider-solution-type ={ path= "pallets/election-provider-support/solution-type", default-features = false}
sc-basic-authorship = { version = "0.45.0", default-features = false }
sc-cli = { version = "0.47.0", default-features = false }
sc-client-api = { version = "37.0.0", default-features = false }
sc-consensus = { version = "0.44.0", default-features = false }
sc-consensus-aura = { version = "0.45.0", default-features = false }
sc-consensus-grandpa = { version = "0.30.0", default-features = false }
sc-executor = { version = "0.40.1", default-features = false }
sc-network = { version = "0.45.0", default-features = false }
sc-offchain = { version = "40.0.0", default-features = false }
sc-service = { version = "0.46.0", default-features = false }
sc-telemetry = { version = "25.0.0", default-features = false }
sc-transaction-pool = { version = "37.0.0", default-features = false }
sc-transaction-pool-api = { version = "37.0.0", default-features = false }
serde_json = { version = "1.0.127", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.1", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-consensus-grandpa = { version = "21.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-keyring = { version = "39.0.0", default-features = false }
sp-runtime = { version = "39.0.1", default-features = false }
sp-tracing = { path="primitives/tracing", default-features = false }
sp-timestamp = { version = "34.0.0", default-features = false }
substrate-frame-rpc-system = { version = "39.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
frame-benchmarking = { version = "38.0.0", default-features = false }
frame-executive = { version = "38.0.0", default-features = false }
frame-support = { version = "38.0.0", default-features = false }
frame-system-benchmarking = { version = "38.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.44.0", default-features = false }
pallet-aura = { version = "37.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
pallet-grandpa = { version = "38.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "38.0.0", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
sp-genesis-builder = { version = "0.15.1", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-session = { version = "36.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-externalities = { path="primitives/externalities", default-features = false }
sp-staking = { version = "37.0.0", default-features = false }
sp-state-machine ={ version = "0.44.0", default-features = false }
sp-trie = { version = "38.0.0", default-features = false }
sp-panic-handler= { path="primitives/panic-handler", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
substrate-wasm-builder = { version = "24.0.1", default-features = false }
