[package]
name = "frame-election-provider-support"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "election provider supporting traits"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-election-provider-solution-type = { workspace = true, default-features = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-arithmetic = { version = "26.0.0",default-features = false }
sp-core = { workspace = true }
sp-npos-elections = { version = "35.0.0",default-features = false }
sp-runtime = { workspace = true }

[dev-dependencies]
rand = { features = ["small_rng"],version = "0.9.0", default-features = true }
sp-io = { workspace = true, default-features = true }
sp-npos-elections = { version = "35.0.0",default-features = false }

[features]
default = ["std"]
fuzz = ["default"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-npos-elections/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
