[package]
name = "pallet-staking"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
frame-election-provider-support = { version = "39.0.0",default-features = false}
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { version = "0.4.25", default-features = false }
pallet-authorship = { version = "39.0.0",default-features = false }
pallet-session = { features = [
	"historical",
], version = "39.0.0",default-features = false }
scale-info = { features = ["derive", "serde"], workspace = true }
serde = { features = ["alloc", "derive"], version = "1.0.127" }
sp-application-crypto = { features = ["serde"], version = "39.0.0" }
sp-io = { workspace = true }
sp-runtime = { features = ["serde"], workspace = true }
sp-staking = { features = ["serde"], version = "37.0.0",default-features = false}

# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }
rand_chacha = { optional = true, version = "0.9.0",default-features = false }

[dev-dependencies]
frame-benchmarking = { workspace = true, default-features = true }
frame-election-provider-support = { version = "39.0.0", default-features = true }
frame-support = { features = ["experimental"], workspace = true, default-features = true }
pallet-bags-list = { version = "38.0.0", default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-staking-reward-curve = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
rand_chacha = { version = "0.9.0", default-features = true }
sp-core = { workspace = true, default-features = true }
sp-npos-elections = { version = "35.0.0", default-features = true }
sp-tracing = {version = "17.0.1", default-features = true }
substrate-test-utils = { version = "3.0.0",default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"serde/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-npos-elections/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-tracing/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"rand_chacha",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
try-runtime = [
	"frame-election-provider-support/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]
