[package]
name = "pallet-staking-reward-curve"
version = "11.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Reward Curve for FRAME staking pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { version = "3.2.0"}
proc-macro2 = { version = "1.0.93" }
quote = { version = "1.0.38" }
syn = { features = ["full", "visit"], version = "2.0.98" }

[dev-dependencies]
sp-runtime = { workspace = true, default-features = true }
